# ner-classifier

./: .gitignore  LICENSE  pyproject.toml
ner_classifier/: cli.py  html_tokenizer.py  project.py
tests/: test_project.py
