[tool.poetry]
name = "ner-classifier"
version = "0.1.0"
description = ""
authors = ["HodeiG <hodei.goncalves@gmail.com>"]

[tool.poetry.scripts]
classifier = "ner_classifier.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
spacy = "^3.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
